Cria cash-closure-repository
